testsuite/tests/patsyn/should_fail/patsyn_where_fail4.hs
{-# LANGUAGE PatternSynonyms #-}

module PatSynWhereFail4 where

pattern P x <- x:xs where
  P x = wrap x
  wrap x = [x]
