testsuite/tests/patsyn/should_fail/patsyn_where_fail4.stderr
patsyn_where_fail4.hs:7:3: error: [GHC-65536]
    Pattern synonym 'where' clause must contain a single binding:
    wrap x = [x]

